# pocmon

./: .gitignore  CMakeLists.txt  README.md
assets/: pokemons.csv
include/: battle.h  cli.h  event_loop.h  files.h  map.h  pokemon.h  save.h  starter.h  structs.h  utils.h
save/: map.map  team.save
src/: battle.c  cli.c  event_loop.c  files.c  main.c  map.c  pokemon.c  save.c  starter.c  structs.c  structs.h  utils.c
